# ChangeLog for dev-python/sqlalchemy-migrate
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/ChangeLog,v 1.36 2014/10/20 17:21:02 jer Exp $

  20 Oct 2014; Jeroen Roovers <jer@gentoo.org> sqlalchemy-migrate-0.9.2.ebuild:
  Marked ~hppa (bug #525246).

*sqlalchemy-migrate-0.9.2 (20 Oct 2014)

  20 Oct 2014; Ian Delaney <idella4@gentoo.org>
  +sqlalchemy-migrate-0.9.2.ebuild, -sqlalchemy-migrate-0.6.1.ebuild,
  -sqlalchemy-migrate-0.7.1.ebuild, -sqlalchemy-migrate-0.7.2-r1.ebuild:
  bump; add py3 support, drop keyword hppa subsequent to adding new dep, remove
  old

  20 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  sqlalchemy-migrate-0.9.ebuild:
  Keyword ~ppc ~ppc64, bug #508282

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  sqlalchemy-migrate-0.9.ebuild:
  Keyworded on alpha, bug #508282

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org>
  sqlalchemy-migrate-0.9.ebuild:
  keyword ~ia64 wrt bug #508282

  04 May 2014; Markus Meier <maekke@gentoo.org> sqlalchemy-migrate-0.9.ebuild:
  add ~arm, bug #508282

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> sqlalchemy-migrate-0.9.ebuild:
  Marked ~hppa (bug #508282).

*sqlalchemy-migrate-0.9 (20 Apr 2014)

  20 Apr 2014; Matthew Thode <prometheanfire@gentoo.org>
  +sqlalchemy-migrate-0.9.ebuild:
  bump, but see bug 508282 (needs rekeywording)

  09 Oct 2013; Matthew Thode <prometheanfire@gentoo.org>
  sqlalchemy-migrate-0.7.2-r1.ebuild:
  readded <0.8 to the sqlalchemy dep

  09 Oct 2013; Matthew Thode <prometheanfire@gentoo.org>
  sqlalchemy-migrate-0.7.2-r1.ebuild:
  I didn't need to restrict to sqlalchemy <0.8 and removed unused variable

*sqlalchemy-migrate-0.7.2-r1 (21 Jun 2013)

  21 Jun 2013; Matthew Thode <prometheanfire@gentoo.org>
  +sqlalchemy-migrate-0.7.2-r1.ebuild:
  eapi5ifying sqlalchemy-migrate

  24 Mar 2013; Mike Gilbert <floppym@gentoo.org>