@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/sqlalchemy-migrate-0.9.2.ebuild,v 1.2 2014/10/20 17:21:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/sqlalchemy-migrate-0.9.2.ebuild,v 1.3 2014/10/22 14:20:35 idella4 Exp $
 
 EAPI=5
-# py3 has a syntax error X2 output @ install however it is non fatal
-PYTHON_COMPAT=( python2_7 python3_3 )
+# py3 has a syntax errors. On testing it is underdone
+PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1
 
