@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sqlalchemy-migrate
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/ChangeLog,v 1.36 2014/10/20 17:21:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/ChangeLog,v 1.37 2014/10/22 14:20:35 idella4 Exp $
+
+  22 Oct 2014; Ian Delaney <idella4@gentoo.org> sqlalchemy-migrate-0.9.2.ebuild:
+  drop py3 support, found to be not py3 ready, cross tested by Arfrever
 
   20 Oct 2014; Jeroen Roovers <jer@gentoo.org> sqlalchemy-migrate-0.9.2.ebuild:
   Marked ~hppa (bug #525246).
